update lincence information.

--- a/README
+++ b/README
@@ -1,5 +1,10 @@
 
-This project's lience is FreeBSD & GNU Library.
+licence:
+Copyright 2012,  Yin MingJun - email: yinmingjuncn@gmail.com
+Dual licensed under the MIT or GPL Version 2 licenses.
+http://jquery.org/license
+
+-------------------------------------------------------------------------------
 
 jWorkFlow's road map
 
