--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
 ﻿
 
 
-1. 完成StateMachineActivity
-2. 完成ParallelActivity
+1. 完成StateMachineActivity	==> OK
+2. 完成ParallelActivity	==> OK
 3. 使用js.class作为基础类库
 4. 寻找合适的soap client
 5. 完成SoapActivity
@@ -11,3 +11,7 @@
 8. 寻找javascript对象创建&对象属性赋值的支持   ==> OK
 9. 支持基于serializeContext的序列化和恢复      ==> OK
 
+10. 提供基础的LogAdapter，并提供基于字符串的log实现；
+11. 寻找第三方的LOG库，并尝试集成；
+12. 实现activity的designer的HTML版本；
+13. 提供designer的结果的XML规格；
